add new features

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <head>
     <body>
         <h1>my name is shovan mondal</h1>
+        <br>
+        <h2>my second friends name is suman</h2>
     </body>
 </head>
