--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
         <h1>my name is shovan mondal</h1>
         <br>
-        <h2>my second friends name is suman</h2>
+        <h2>my second friends name is suman(dropdown)</h2>
     </body>
 </head>
